--- a/package.json
+++ b/package.json
@@ -21,13 +21,19 @@
     "tailwindcss": "^3.3.6",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.3"
+    "vite": "^5.0.3",
+    "wrangler": "^3.23.0"
   },
   "type": "module",
   "dependencies": {
     "clsx": "^2.1.0",
+    "drizzle": "^1.4.0",
+    "drizzle-valibot": "^0.1.1",
+    "lucia": "beta",
+    "oslo": "^0.27.1",
     "radix-icons-svelte": "^1.2.1",
     "tailwind-merge": "^2.2.0",
-    "tailwind-variants": "^0.1.20"
+    "tailwind-variants": "^0.1.20",
+    "valibot": "^0.26.0"
   }
 }
