--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@cloudflare/workers-types": "^4.20240117.0",
     "@iarna/toml": "^2.2.5",
     "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-cloudflare": "^4.1.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "autoprefixer": "^10.4.16",
